@@ -1,5 +1,9 @@
 2008-02-08  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: removed some redraws.
+
+2008-02-08  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/Document.cs, Mono.TextEditor/LineSplitter.cs,
 	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
 	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed highlighting
